--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-stomp": "^5.1.0",
+    "sockjs-client": "^1.5.1",
+    "web-vitals": "^1.1.2",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
