--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "axios-retry": "^3.1.9",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
@@ -17,7 +18,8 @@
     "react-stomp": "^5.1.0",
     "sockjs-client": "^1.5.1",
     "web-vitals": "^1.1.2",
-    "websocket": "^1.0.34"
+    "websocket": "^1.0.34",
+    "webstomp-client": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
